# codex-provider

./: .gitignore  AGENTS.md  README.md  build.cmd  build.py  build.sh  codex-provider  codex-provider-bin.spec  codex_provider.py  opencode-provider  opencode-provider.spec  opencode_provider.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
codex_provider_lib/: __init__.py  cli.py  constants.py  errors.py  network.py  platform.py  toml_config.py
tests/: conftest.py  test_cli_and_network.py  test_opencode_provider.py  test_storage.py
