[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-provider"
dynamic = ["version"]
description = "Provider registry and auth snapshot manager for Codex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "tomlkit>=0.13,<1",
]

[project.optional-dependencies]
build = [
  "pyinstaller==6.21.0",
]
dev = [
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[project.scripts]
codex-provider = "codex_provider:main"

[tool.setuptools]
py-modules = ["codex_provider"]
packages = ["codex_provider_lib"]

[tool.setuptools.dynamic]
version = { attr = "codex_provider_lib.constants.VERSION" }

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
